[workspace]
members = ["lcm-transport", "zenoh-bridge-lcm", "zenoh-plugin-lcm"]
resolver = "2"

[workspace.package]
authors = ["CKT <ckt@users.noreply.github.com>"]
categories = ["network-programming"]
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/ckt/zenoh-plugin-lcm"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = "3.2.23"
flume = "0.11"
futures = "0.3.26"
git-version = "0.3.5"
lazy_static = "1.4.0"
regex = "1.7.1"
rustc_version = "0.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
zenoh = { version = "1.8.0", features = [
  "plugins",
  "unstable",
  "internal",
  "internal_config",
], git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-config = { version = "1.8.0", default-features = false, git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-ext = { version = "1.8.0", features = [
  "unstable",
], git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-plugin-lcm = { version = "0.1.0", path = "zenoh-plugin-lcm/", default-features = false }
zenoh-plugin-rest = { version = "1.8.0", default-features = false, features = [
  "static_plugin",
], git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-plugin-trait = { version = "1.8.0", default-features = false, git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
lcm-transport = { version = "0.1.0", path = "lcm-transport/" }
socket2 = { version = "0.5", features = ["all"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
