[package]
name = "zenoh-plugin-lcm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
description = "Zenoh plugin for LCM (Lightweight Communications and Marshalling)"

[lib]
name = "zenoh_plugin_lcm"
crate-type = ["cdylib", "rlib"]

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []
stats = ["zenoh/stats"]

[dependencies]
flume = { workspace = true }
futures = { workspace = true }
git-version = { workspace = true }
lazy_static = { workspace = true }
lcm-transport = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zenoh = { workspace = true }
zenoh-config = { workspace = true }
zenoh-plugin-trait = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[package.metadata.deb]
name = "zenoh-plugin-lcm"
maintainer = "CKT <ckt@users.noreply.github.com>"
copyright = "2024 CKT"
section = "net"
license-file = ["../LICENSE", "0"]
